--- a/Nano-Paste-Frontend/src/styles.css
+++ b/Nano-Paste-Frontend/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body, html{
+    max-width: 768px;
+    margin: auto;
+    background-color:#5cdddd;
+}
